@@ -33,6 +33,7 @@ CAY-1764 cdbimport improvements: "overwrite" flag
 CAY-1765 cdbimport improvements: add excludeTables/includeTables parameters
 CAY-1766 Deprecating DataPort ant task
 CAY-1768 cdbimport improvements: DataMap "project-version" attribute is skipped when DM is saved
+CAY-1769 cdbimport improvements: meaningfulPk flag must be turned into a pattern
 
 Bug Fixes:
 
